--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Oldal címe</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"
-    <title>Oldal címe</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Fejlesztés alatt</h1>
